@@ -1,3 +1,6 @@
+2010-03-18 Starboy Qi <starboy.qi@gmail.com>
+     * Add ChangeLog in Ailurus
+     
 2010-03-16 MA Yue <velly.empire@gmail.com>
 
     * Add functionality for changing default window manager, file manager and panel program 
